<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity">

    <TextView
        android:id="@+id/startTitle"
        android:layout_width="146dp"
        android:layout_height="46dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="112dp"
        android:capitalize="none"
        android:gravity="center"
        android:text="@string/start_title"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/startLogin"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:text="@string/start_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startSubTitle" />

    <Button
        android:id="@+id/startRegister"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:text="@string/start_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/startLogin"
        app:layout_constraintTop_toBottomOf="@+id/startSubTitle" />

    <TextView
        android:id="@+id/startSubTitle"
        android:layout_width="333dp"
        android:layout_height="99dp"
        android:layout_marginTop="52dp"
        android:gravity="center"
        android:text="@string/start_sub_title"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startTitle" />
</androidx.constraintlayout.widget.ConstraintLayout>