<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <EditText
        android:id="@+id/setupProfileName"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.522"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setupProfilePassword" />

    <EditText
        android:id="@+id/setupProfileAge"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="52dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setupProfileBDate" />

    <TextView
        android:id="@+id/setupProfileGenreTextView2"
        android:layout_width="53dp"
        android:layout_height="19dp"
        android:layout_marginBottom="4dp"
        android:text="@string/profile_age"
        app:layout_constraintBottom_toTopOf="@+id/setupProfileAge"
        app:layout_constraintStart_toStartOf="@+id/setupProfileAge" />

    <Spinner
        android:id="@+id/setupProfileGenre"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toStartOf="@+id/setupProfileAge"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setupProfileBDate" />

    <TextView
        android:id="@+id/setupProfileGenreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/profile_gen"
        app:layout_constraintBottom_toTopOf="@+id/setupProfileGenre"
        app:layout_constraintStart_toStartOf="@+id/setupProfileGenre" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/profile_name"
        app:layout_constraintBottom_toTopOf="@+id/setupProfileName"
        app:layout_constraintStart_toStartOf="@+id/setupProfileName"
        app:layout_constraintTop_toBottomOf="@+id/setupProfilePassword" />

    <EditText
        android:id="@+id/setupProfileBDate"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.522"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setupProfileName" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="35dp"
        android:layout_height="32dp"
        app:layout_constraintEnd_toStartOf="@+id/setupProfileBDate"
        app:layout_constraintHorizontal_bias="0.695"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/setupProfileBDate"
        app:srcCompat="@drawable/calendar" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="4dp"
        android:text="@string/profile_bdate"
        app:layout_constraintBottom_toTopOf="@+id/setupProfileBDate"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="36dp"
        android:layout_height="34dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toStartOf="@+id/setupProfileName"
        app:layout_constraintHorizontal_bias="0.833"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/setupProfileName"
        app:srcCompat="@drawable/user" />

    <EditText
        android:id="@+id/setupProfileHeight"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setupProfileWeight" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="35dp"
        android:layout_height="36dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/setupProfileHeight"
        app:layout_constraintTop_toTopOf="@+id/setupProfileHeight"
        app:srcCompat="@drawable/height" />

    <EditText
        android:id="@+id/setupProfileWeight"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setupProfileAge" />

    <TextView
        android:id="@+id/setupProfileGenreTextView3"
        android:layout_width="92dp"
        android:layout_height="19dp"
        android:layout_marginBottom="4dp"
        android:text="@string/profile_weight"
        app:layout_constraintBottom_toTopOf="@+id/setupProfileWeight"
        app:layout_constraintStart_toStartOf="@+id/setupProfileWeight" />

    <TextView
        android:id="@+id/setupProfileGenreTextView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/profile_height"
        app:layout_constraintBottom_toTopOf="@+id/setupProfileHeight"
        app:layout_constraintStart_toStartOf="@+id/setupProfileHeight" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="36dp"
        android:layout_height="34dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintEnd_toStartOf="@+id/setupProfileWeight"
        app:layout_constraintTop_toTopOf="@+id/setupProfileWeight"
        app:srcCompat="@drawable/weight" />

    <TextView
        android:id="@+id/setupProfileTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/setup_profile_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/setupProfileFinishBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="48dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/checked" />

    <EditText
        android:id="@+id/setupProfileEmail"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:inputType="textPersonName|textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setupProfileTitle" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/profile_email"
        app:layout_constraintBottom_toTopOf="@+id/setupProfileEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.159"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setupProfileTitle"
        app:layout_constraintVertical_bias="0.2" />

    <EditText
        android:id="@+id/setupProfilePassword"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setupProfileEmail" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="4dp"
        android:text="@string/profile_password"
        app:layout_constraintBottom_toTopOf="@+id/setupProfilePassword"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>