<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MealsActivity">

    <TextView
        android:id="@+id/tvDinner"
        android:layout_width="250dp"
        android:layout_height="34dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:width="200dp"
        android:gravity="start"
        android:text="@string/meals_dinner"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageButtonDinner"
        app:layout_constraintTop_toBottomOf="@+id/mealsSnacks"
        app:lineHeight="30dp" />

    <EditText
        android:id="@+id/mealsDinner"
        android:layout_width="405dp"
        android:layout_height="45dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="numberSigned|textMultiLine|number|text|phone"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        android:text="@string/meals_0kcal"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAddDinner" />

    <Button
        android:id="@+id/btnAddLunch"
        android:layout_width="57dp"
        android:layout_height="44dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="4dp"
        android:background="#FFFFFF"
        android:text="+"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mealsBreakfast" />

    <Button
        android:id="@+id/btnAddSnacks"
        android:layout_width="57dp"
        android:layout_height="44dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="4dp"
        android:background="#FFFFFF"
        android:text="+"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mealsLaunch" />

    <Button
        android:id="@+id/btnAddDinner"
        android:layout_width="57dp"
        android:layout_height="44dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="4dp"
        android:background="#FFFFFF"
        android:text="+"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mealsSnacks" />

    <TextView
        android:id="@+id/tvSnacks"
        android:layout_width="250dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:width="200dp"
        android:gravity="start"
        android:text="@string/meals_snacks"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageButtonSnack"
        app:layout_constraintTop_toBottomOf="@+id/mealsLaunch"
        app:lineHeight="30dp" />

    <EditText
        android:id="@+id/mealsLaunch"
        android:layout_width="405dp"
        android:layout_height="45dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="numberSigned|textMultiLine|number|text|phone"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        android:text="@string/meals_0kcal"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAddLunch" />

    <ImageButton
        android:id="@+id/imageButtonLunch"
        android:layout_width="51dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mealsBreakfast"
        app:srcCompat="@drawable/soup" />

    <TextView
        android:id="@+id/tvLunch"
        android:layout_width="250dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:width="200dp"
        android:gravity="start"
        android:text="@string/meals_launch"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageButtonLunch"
        app:layout_constraintTop_toBottomOf="@+id/mealsBreakfast"
        app:lineHeight="30dp" />

    <EditText
        android:id="@+id/mealsSnacks"
        android:layout_width="405dp"
        android:layout_height="45dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="numberSigned|textMultiLine|number|text|phone"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        android:text="@string/meals_0kcal"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAddSnacks" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="250dp"
        android:layout_height="28dp"
        android:layout_marginStart="8dp"
        android:width="200dp"
        android:gravity="start"
        android:text="@string/meals_breakfast"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/mealsBreakfast"
        app:layout_constraintStart_toEndOf="@+id/imageButtonBreakfast2"
        app:lineHeight="30dp" />

    <EditText
        android:id="@+id/mealsBreakfast"
        android:layout_width="405dp"
        android:layout_height="45dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="numberSigned|textMultiLine|number|text|phone"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        android:text="@string/meals_0kcal"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAddBreakfast" />

    <ImageButton
        android:id="@+id/imageButtonBreakfast2"
        android:layout_width="46dp"
        android:layout_height="37dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/coffee"
        android:tint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/mealsBreakfast"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/coffee" />

    <Button
        android:id="@+id/btnAddBreakfast"
        android:layout_width="57dp"
        android:layout_height="44dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="4dp"
        android:background="#FFFFFF"
        android:text="+"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButtonSnack"
        android:layout_width="49dp"
        android:layout_height="34dp"
        android:layout_marginTop="20dp"
        android:background="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mealsLaunch"
        app:srcCompat="@drawable/apple" />

    <ImageButton
        android:id="@+id/imageButtonDinner"
        android:layout_width="45dp"
        android:layout_height="39dp"
        android:layout_marginTop="20dp"
        android:background="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mealsSnacks"
        app:srcCompat="@drawable/chicken" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="318dp"
        android:layout_height="48dp"
        android:gravity="center"
        android:text="@string/meals_subTitle"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/meals_title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/mealsAddButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:text="@string/meals_addButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mealsDinner" />

</androidx.constraintlayout.widget.ConstraintLayout>